@@ -97,10 +97,6 @@
 (global-set-key (kbd "C-c <up>")    'windmove-up)
 (global-set-key (kbd "C-c <down>")  'windmove-down)
 
-;; set imenu to M-i
-(global-set-key (kbd "M-i") 'imenu)
-
-
 ;; framemove will move frames when at limits of current frame
 (use-package framemove
   :config
@@ -230,18 +226,13 @@ buffer read-only, so I suggest setting kill-read-only-ok to t."
   (push-mark (point) t nil)
   (message "Pushed mark to ring"))
 
-(global-set-key (kbd "C-`") 'push-mark-no-activate)
-
 (defun jump-to-mark ()
   "Jumps to the local mark, respecting the `mark-ring' order.  This is the same as using \\[set-mark-command] with the prefix argument."
   (interactive)
   (set-mark-command 1))
-(global-set-key (kbd "M-`") 'jump-to-mark)
 
-(defface visible-mark-active
-  ;; put this before (require 'visible-mark)
-  '((((type tty) (class mono)))
-    (t (:background "magenta"))) "")
+(global-set-key (kbd "C-`") 'push-mark-no-activate)
+(global-set-key (kbd "M-`") 'jump-to-mark)
 
 (use-package visible-mark
   :config
