@@ -11,12 +11,41 @@
  ;; If you edit it by hand, you could mess it up, so be careful.
  ;; Your init file should contain only one such instance.
  ;; If there is more than one, they won't work right.
+ '(ansi-color-faces-vector
+   [default default default italic underline success warning error])
  '(bmkp-last-as-first-bookmark-file "/Users/stephenjenkins/.emacs.d/bookmarks")
+ '(fci-rule-color "#383838")
+ '(nrepl-message-colors
+   (quote
+    ("#CC9393" "#DFAF8F" "#F0DFAF" "#7F9F7F" "#BFEBBF" "#93E0E3" "#94BFF3" "#DC8CC3")))
  '(package-selected-packages
    (quote
-    (whole-line-or-region visible-mark ido-imenu help-fns+ help-fns+\.el origami paredit-everywhere paredit-everywhere-mode framemove company-anaconda anaconda-mode pip-requirements php-mode smarty-mode csv-nav csv-mode whitespace-cleanup-mode textile-mode crontab-mode guide-key magit-gh-pulls github-issues github-clone bug-reference-github yagist git-messenger fullframe git-timemachine gitconfig-mode gitignore-mode git-blamed browse-at-remote nlinum indent-guide ivy-historian uniquify diredful dired dired-sort dired+ scratch wgrep-ag uptimes rpn-calc bookmark+ flycheck-color-mode-line gist zenburn-theme yasnippet yaml-mode writegood-mode which-key volatile-highlights use-package thesaurus sunrise-x-loop smex shell-pop rainbow-delimiters pyvenv python-mode pyenv-mode-auto org-dashboard org-cliplink org-bullets markdown-mode magithub macrostep log4e load-dir jedi ido-ubiquitous ido-at-point goto-chg google-this golden-ratio furl frame-cmds flycheck-pos-tip flx-ido fic-ext-mode emr elisp-slime-nav elfeed-org el-get dummy-h-mode drag-stuff dired-toggle-sudo dired-ranger dired-rainbow dired-open dired-narrow dired-launch diff-hl deft dashboard crux counsel company-shell company-quickhelp company-jedi company-irony browse-kill-ring beacon batch-mode bash-completion avy arduino-mode aggressive-indent ag))))
+    (cyberpunk-theme whole-line-or-region visible-mark ido-imenu help-fns+ help-fns+\.el framemove company-anaconda anaconda-mode pip-requirements php-mode smarty-mode csv-nav csv-mode whitespace-cleanup-mode textile-mode crontab-mode guide-key magit-gh-pulls github-issues github-clone bug-reference-github yagist git-messenger fullframe git-timemachine gitconfig-mode gitignore-mode git-blamed browse-at-remote nlinum indent-guide ivy-historian uniquify diredful dired dired-sort dired+ scratch wgrep-ag uptimes rpn-calc bookmark+ flycheck-color-mode-line gist zenburn-theme yasnippet yaml-mode writegood-mode which-key volatile-highlights use-package thesaurus sunrise-x-loop smex shell-pop rainbow-delimiters pyvenv python-mode pyenv-mode-auto org-dashboard org-cliplink org-bullets markdown-mode magithub macrostep log4e load-dir jedi ido-ubiquitous ido-at-point goto-chg google-this golden-ratio furl frame-cmds flycheck-pos-tip flx-ido fic-ext-mode emr elisp-slime-nav elfeed-org el-get dummy-h-mode drag-stuff dired-toggle-sudo dired-ranger dired-rainbow dired-open dired-narrow dired-launch diff-hl deft dashboard crux counsel company-shell company-quickhelp company-jedi company-irony browse-kill-ring beacon batch-mode bash-completion avy arduino-mode aggressive-indent ag)))
+ '(pdf-view-midnight-colors (quote ("#DCDCCC" . "#383838")))
+ '(vc-annotate-background "#2B2B2B")
+ '(vc-annotate-color-map
+   (quote
+    ((20 . "#BC8383")
+     (40 . "#CC9393")
+     (60 . "#DFAF8F")
+     (80 . "#D0BF8F")
+     (100 . "#E0CF9F")
+     (120 . "#F0DFAF")
+     (140 . "#5F7F5F")
+     (160 . "#7F9F7F")
+     (180 . "#8FB28F")
+     (200 . "#9FC59F")
+     (220 . "#AFD8AF")
+     (240 . "#BFEBBF")
+     (260 . "#93E0E3")
+     (280 . "#6CA0A3")
+     (300 . "#7CB8BB")
+     (320 . "#8CD0D3")
+     (340 . "#94BFF3")
+     (360 . "#DC8CC3"))))
+ '(vc-annotate-very-old-color "#DC8CC3"))
 
- 
+
 
 (custom-set-faces
  ;; custom-set-faces was added by Custom.
